language-server/src/tests/snapshots/gleam_language_server__tests__action__fill_labels_uses_variable_in_scope_with_matching_type.snap
---
source: language-server/src/tests/action.rs
expression: "\npub type Player {\n    Player(name: String, team: String)\n}\n\npub fn main() {\n    let name = \"Priya\"\n    Player(team: \"BLU\")\n}\n"
---
----- BEFORE ACTION

pub type Player {
    Player(name: String, team: String)
}

pub fn main() {
    let name = "Priya"
    Player(team: "BLU")
    ↑                  
}


----- AFTER ACTION

pub type Player {
    Player(name: String, team: String)
}

pub fn main() {
    let name = "Priya"
    Player(team: "BLU", name:)
}
