language-server/src/tests/snapshots/gleam_language_server__tests__action__fill_labels_variable_from_outer_scope_not_shadowed.snap
---
source: language-server/src/tests/action.rs
expression: "\npub type Player {\n    Player(name: String, team: String)\n}\n\npub fn main() {\n    let name = \"Outer\"\n    let callback = fn() {\n        Player(team: \"BLU\")\n    }\n}\n"
---
----- BEFORE ACTION

pub type Player {
    Player(name: String, team: String)
}

pub fn main() {
    let name = "Outer"
    let callback = fn() {
        Player(team: "BLU")
        ↑                  
    }
}


----- AFTER ACTION

pub type Player {
    Player(name: String, team: String)
}

pub fn main() {
    let name = "Outer"
    let callback = fn() {
        Player(team: "BLU", name:)
    }
}
