language-server/src/tests/snapshots/gleam_language_server__tests__action__fill_unused_fields_with_ignored_fields_never_calls_a_positional_arg_as_a_labelled_one.snap
---
source: language-server/src/tests/action.rs
expression: "\npub type Wibble { Wibble(Int, int: Int) }\n\npub fn main() {\n  let Wibble(..) = todo\n}"
---
----- BEFORE ACTION

pub type Wibble { Wibble(Int, int: Int) }

pub fn main() {
  let Wibble(..) = todo
             ↑         
}


----- AFTER ACTION

pub type Wibble { Wibble(Int, int: Int) }

pub fn main() {
  let Wibble(int_2, int:) = todo
}
