language-server/src/tests/snapshots/gleam_language_server__tests__action__fill_unused_fields_with_ignored_positional_fields.snap
---
source: language-server/src/tests/action.rs
expression: "\npub type Wibble { Wibble(Int, label1: String, label2: Int) }\n\npub fn main() {\n  let Wibble(label1:, label2:, ..) = todo\n}"
---
----- BEFORE ACTION

pub type Wibble { Wibble(Int, label1: String, label2: Int) }

pub fn main() {
  let Wibble(label1:, label2:, ..) = todo
                               ↑         
}


----- AFTER ACTION

pub type Wibble { Wibble(Int, label1: String, label2: Int) }

pub fn main() {
  let Wibble(int, label1:, label2:) = todo
}
