language-server/src/tests/snapshots/gleam_language_server__tests__action__fix_deprecated_pipe_syntax.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  1 |> wibble(2)\n}\n\npub fn wibble(a) {\n  fn(b) {\n    #(a, b)\n  }\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  1 |> wibble(2)
        ↑       
}

pub fn wibble(a) {
  fn(b) {
    #(a, b)
  }
}


----- AFTER ACTION

pub fn main() {
  1 |> wibble(2)()
}

pub fn wibble(a) {
  fn(b) {
    #(a, b)
  }
}
